--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,40 @@
 /* Add your CSS to this file */
-body {
-    margin: 0;
-    font-size: 16px;
-}
 
-.container {
+body{
+    margin: 0;
+    font-size: 18px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, "NotoSans", sans-serif;
+}
+.container{
     margin: 0 auto;
     max-width: 960px;
     width: 100%;
+}
+/*Header*/
+
+header > .container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 18px;
+    padding-top: 7px;
+}
+header h1{
+    font-size: 18px;
+}
+ul{
+    margin: 0;
+    list-style-type: none;
+}
+li{
+    font-weight: bold;
+    display: inline;
+}
+li a{
+    color: #6b7280;
+    display: inline-block;
+    text-decoration: none;
+}
+li a:hover{
+    color: #5A67D8;
 }
