--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,7 @@ li a:hover{
     display: flex;
     flex-direction: column;
     padding-top: 50px;
+    padding-bottom: 50px;
 }
 .stories .container > h2{
     color: #5A67D8;
@@ -156,4 +157,30 @@ article{
 }
 .stories .container .article-body{
     padding-left: 45px;
+}
+
+/*Newsletter*/
+.newsletter{
+    background-color: #48BB78;
+    padding-bottom: 27px;
+}
+.newsletter .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.newsletter .container > form{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 400px;
+}
+#email{
+    height: 34px;
+    width: 230px;
+    border-radius: 5px;
+}
+.newsletter .btn{
+    background-color: #5A67D8;
+    border-radius: 5px;
 }
