--- a/styles.css
+++ b/styles.css
@@ -184,3 +184,11 @@ article{
     background-color: #5A67D8;
     border-radius: 5px;
 }
+footer{
+    background-color: #4A5568;
+    padding-bottom: 1px;
+    padding-top: 1px;
+}
+footer .container > p{
+    color: white;
+}
